--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "prebuild:dev": "rimraf dist",
-    "prebuild": "rimraf dist",
+    "prebuild:dev": "rimraf dist/",
+    "prebuild": "rimraf dist/",
     "build:dev": "parcel src/index.html",
     "build": "parcel build src/index.html --no-source-maps",
     "prepare": "husky install"
